--- a/chat/views/home.html
+++ b/chat/views/home.html
@@ -2,12 +2,12 @@
 <html lang="es">
 <head>
 	<meta charset="UTF-8">
-	<title>Chat de Javier</title>
+	<title>Mensajes</title>
 	<script type="text/javascript" src="jquery.js"></script>
 	<script type="text/javascript" src="main.js"></script>
 </head>
 <body>
-	<h1>Chat de Javier</h1>
+	<h1>Mensajes</h1>
 	<p><textarea id="mensaje"></textarea></p>
 	<p><button id="enviar-mensaje">Enviar mensaje</button></p>	
 	<ul id="chat">
